# LightControlApp

./: .gitignore  CMakeLists.txt  ChannelSetter.cpp  ChannelSetter.h  LightController.cpp  LightController.h  Main.qml  OnlineParam.cpp  OnlineParam.h  Protocol.cpp  Protocol.cpp~RF1a03b7b.TMP  Protocol.cpp~RF1a3457f.TMP  Protocol.cpp~RF1a58b96.TMP  Protocol.cpp~RF1a79e98.TMP  Protocol.cpp~RF1b9cdaf.TMP  Protocol.cpp~RF1c5331a.TMP  Protocol.cpp~RF1fb0c71.TMP  Protocol.h  PwmSetter.cpp  PwmSetter.h  README.md  SerialCom.cpp  SerialCom.h  SettingManager.cpp  SettingManager.h  Tools.hpp  app_icon.aps  app_icon.rc  main.cpp
qml/: ChannelBar.qml  ChannelButton.qml  ChannelParamBoard.qml  ChannelParamSetter.qml  ComSettingItem.qml  ControlModeSetting.qml  ControlPanel.qml  DoubleTabBar.qml  HomePage.qml  Message.qml  NeonText.qml  OnlineParamBoard.qml  ParamBoard.qml  ParamLabel.qml  PwmBoard.qml  PwmHzSetting.qml  PwmSetter.qml  PwmSetter.qml.autosave  SettingBoard.qml  SettingPage.qml
